--- a/JAVASCRIPT/DOM/3.html
+++ b/JAVASCRIPT/DOM/3.html
@@ -5,7 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM manipulation</title>
 </head>
-<body>
+<body style="background-color: 212121; color: fff;">
     
 </body>
+<script>
+    const div = document.createElement('div')
+    console.log(div);
+    div.className = "main"
+    div.id = Math.round(Math.random() * 10 + 1)
+    div.setAttribute("title", "generated title")
+    div.style.backgroundColor = "green"
+    div.style.padding = "12px"
+    //div.innerText = "Deep our Chai" 
+    const addText = document.createTextNode("Deep our Chai")
+    div.appendChild(addText)
+
+    document.body.appendChild(div)
+</script>
 </html>
